--- a/friends/package.json
+++ b/friends/package.json
@@ -8,6 +8,7 @@
     "@types/react": "16.8.5",
     "@types/react-dom": "16.8.2",
     "axios": "^0.18.0",
+    "fp-ts": "^1.14.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-router-dom": "^4.3.1",
@@ -28,5 +29,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "node-sass": "^4.11.0"
+  }
 }
