--- a/friends/package.json
+++ b/friends/package.json
@@ -8,21 +8,22 @@
     "@types/react": "16.8.5",
     "@types/react-dom": "16.8.2",
     "axios": "^0.18.0",
+    "bs-css": "^8.0.2",
     "fp-ts": "^1.14.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "reason-react": "^0.5.3",
     "typescript": "3.3.3333"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "eject": "react-scripts eject",
+    "bs:build": "export BS_CMT_POST_PROCESS_CMD=\"gentype\" && bsb -make-world",
+    "bs:clean": "bsb -clean-world"
   },
   "browserslist": [
     ">0.2%",
@@ -31,6 +32,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "bs-platform": "^4.0.18",
+    "gentype": "^2.12.0",
     "node-sass": "^4.11.0"
   }
 }
