--- a/friends/bsconfig.json
+++ b/friends/bsconfig.json
@@ -12,10 +12,7 @@
     "in-source": true
   },
   "suffix": ".bs.js",
-  "bs-dependencies": [
-    "bs-css",
-    "reason-react"
-  ],
+  "bs-dependencies": ["bs-css", "reason-react", "reason-future", "bs-axios"],
   "warnings": {
     "error": "+101"
   },
