--- a/friends/package.json
+++ b/friends/package.json
@@ -8,12 +8,14 @@
     "@types/react": "16.8.5",
     "@types/react-dom": "16.8.2",
     "axios": "^0.18.0",
+    "bs-axios": "^0.0.39",
     "bs-css": "^8.0.2",
     "fp-ts": "^1.14.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "reason-future": "^2.4.0",
     "reason-react": "^0.5.3",
     "typescript": "3.3.3333"
   },
