--- a/friends/bsconfig.json
+++ b/friends/bsconfig.json
@@ -12,7 +12,13 @@
     "in-source": true
   },
   "suffix": ".bs.js",
-  "bs-dependencies": ["bs-css", "reason-react", "reason-future", "bs-axios"],
+  "bs-dependencies": [
+    "bs-css",
+    "@glennsl/bs-json",
+    "reason-react",
+    "reason-future",
+    "bs-axios"
+  ],
   "warnings": {
     "error": "+101"
   },
